# modules_vins

./: .gitignore  CMakeLists.txt  README.md  package.xml
Docker/: Dockerfile  run_dev.sh
cmake/: ROS1.cmake
configs/BotanicGarden/: camera_config.yaml  system_config.yaml
examples/torchscripts_tutorials/: CMakeLists.txt  MiDas.py  YoloDetect.cpp  YoloDetect.h  example-app.cpp  example-seg.cpp  yolo_detect.py  yolo_seg.py
launch/: run_serial_vins.launch
src/: run_serial_vins.cc
src/data/: camera.cc  camera.h  data.cmake  point.cc  point.h
src/frontend/: frontend.cmake  visual_frontend.cc  visual_frontend.h
src/frontend/detect/: detector.cc  detector.h
src/frontend/detect/features/: descriptors.cc  descriptors.h  feature_points.cc  feature_points.h
src/frontend/tracking/: tracker.cc  tracker.h  tracking_descriptor.cc  tracking_descriptor.h
src/log/: colors.h  log.cmake  logging.cc  logging.h
src/system/: camera_config.cc  camera_config.h  config.cc  config.h  imu_config.cc  imu_config.h  system.cmake  system_config.cc  system_config.h  vins_system.cc  vins_system.h
src/utils/: utils.cc  utils.cmake  utils.h
src/visualization/: opencv_visualizer.cc  opencv_visualizer.h  ros1_visualizer.cc  ros1_visualizer.h  visualization.cmake  visualizer.cc  visualizer.h
