<?xml version="1.0"?>
<package format="2">
  <name>modules_vins</name>
  <version>0.0.0</version>
  <description>The modules_vins package</description>

  <maintainer email="Z.Zhong@lboro.ac.uk">root</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <export>

  </export>
</package>
